--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 24px;
     line-height: 1.5;
-    background-color: #FDFFFA;
+    background-color: #FFF9F5;
     color: #010c32;
     margin: 40px auto;
     width: 1120px;
